logs/dag_id=kezekte_etl/run_id=manual__2024-07-30T17:06:52.395976+00:00/task_id=create_table/attempt=1.log
[2024-07-30T17:06:58.267+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-30T17:06:58.275+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: kezekte_etl.create_table manual__2024-07-30T17:06:52.395976+00:00 [queued]>
[2024-07-30T17:06:58.278+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: kezekte_etl.create_table manual__2024-07-30T17:06:52.395976+00:00 [queued]>
[2024-07-30T17:06:58.279+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-07-30T17:06:58.284+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): create_table> on 2024-07-30 17:06:52.395976+00:00
[2024-07-30T17:06:58.292+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=1373) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-30T17:06:58.294+0000] {standard_task_runner.py:63} INFO - Started process 1375 to run task
[2024-07-30T17:06:58.295+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'kezekte_etl', 'create_table', 'manual__2024-07-30T17:06:52.395976+00:00', '--job-id', '62', '--raw', '--subdir', 'DAGS_FOLDER/kezekte_etl.py', '--cfg-path', '/tmp/tmpaih7xnoq']
[2024-07-30T17:06:58.300+0000] {standard_task_runner.py:91} INFO - Job 62: Subtask create_table
[2024-07-30T17:06:58.338+0000] {task_command.py:426} INFO - Running <TaskInstance: kezekte_etl.create_table manual__2024-07-30T17:06:52.395976+00:00 [running]> on host d6d2ff1599d5
[2024-07-30T17:06:58.382+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='kezekte_etl' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-07-30T17:06:52.395976+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-30T17:06:52.395976+00:00'
[2024-07-30T17:06:58.383+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-30T17:06:58.392+0000] {sql.py:276} INFO - Executing: 
            create table if not exists raw_animals (
                chip_id PRIMARY KEY,
                type varchar(255),
                nickname varchar(255),
                gender varchar(255),
                breed varchar(255),
                passport_number varchar(255),
                register_date timestamp,
                birthday date,
                status varchar(255),
                ownership varchar(255),
                register_type varchar(255),
                tagging_location varchar(255),
                tagging_place varchar(255),
                tagging_date date,
                district_area varchar(255),
                date_vaccination date,
                date_sterilization_castration date
            )
        
[2024-07-30T17:06:58.396+0000] {base.py:84} INFO - Using connection ID 'postgresql_conn' for task execution.
[2024-07-30T17:06:58.400+0000] {base.py:84} INFO - Using connection ID 'postgresql_conn' for task execution.
[2024-07-30T17:06:58.402+0000] {sql.py:487} INFO - Running statement: 
            create table if not exists raw_animals (
                chip_id PRIMARY KEY,
                type varchar(255),
                nickname varchar(255),
                gender varchar(255),
                breed varchar(255),
                passport_number varchar(255),
                register_date timestamp,
                birthday date,
                status varchar(255),
                ownership varchar(255),
                register_type varchar(255),
                tagging_location varchar(255),
                tagging_place varchar(255),
                tagging_date date,
                district_area varchar(255),
                date_vaccination date,
                date_sterilization_castration date
            )
        , parameters: None
[2024-07-30T17:06:58.403+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-30T17:06:58.403+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY"
LINE 3:                 chip_id PRIMARY KEY,
                                ^

[2024-07-30T17:06:58.408+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=kezekte_etl, task_id=create_table, run_id=manual__2024-07-30T17:06:52.395976+00:00, execution_date=20240730T170652, start_date=20240730T170658, end_date=20240730T170658
[2024-07-30T17:06:58.413+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 62 for task create_table (syntax error at or near "PRIMARY"
LINE 3:                 chip_id PRIMARY KEY,
                                ^
; 1375)
[2024-07-30T17:06:58.436+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-30T17:06:58.446+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-30T17:06:58.448+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
